--- a/style.css
+++ b/style.css
@@ -71,7 +71,8 @@
 /* ------- HOME ---------*/
 .home {
   display: flex;
-  background: url(/images/pexels-negative-space-92904.jpg) no-repeat center;
+  background-color: rgb(12, 12, 12);
+  no-repeat center;
   background-size: 100% 100%;
   height: 100vh;
   color: #fff;
@@ -80,13 +81,7 @@
 }
 
 .home .max-width {
-  margin: 310px 0 auto 40px;
-}
-
-.home .max-width {
-  color: #fff;
-  font-family: 'Ubuntu', sans-serif;
-  margin: 310px 0 auto 40px;
+  margin: auto 0 auto 40px;
 }
 
 .home .home-content .text-1 {
@@ -108,50 +103,96 @@
   font-weight: 500;
 }
 
-.home .home-content .text-4 {
-  font-size: 40px;
-  margin: 5px 0;
-  color: rgb(250, 240, 99);
-  font-weight: 500;
-}
-
 /*----- MENU MOBILE -----*/
 
 .menu-bottom {
 color: #fff;
-font-size: 27px;
+font-size: 26px;
 cursor: pointer;
 display: none;
 }
 
 /*-----RESPONSIVE-----*/
+@media(max-width: 1104px){
+  .navbar .max-width {
+    margin-left: 0;
+  }
+}
+
+@media(max-width: 991px){
+  .navbar .max-width {
+    padding: 0 50px;
+  }
+}
+
 @media(max-width: 947px){
   .max-width {
+    max-width: 800px;
     padding: 0  50px;
   }
   .menu-bottom {
     display: block;
     z-index: 999;
   }
-  .navbar .menu{
+  .navbar .menu {
     position: fixed;
     width: 100%;
     height: 100vh;
-    left: 0;
+    left: -100%;
     top: 0;
     background: rgb(49, 173, 182);
     padding-top: 80px;
     text-align: center;
+    transition: all 0.3s ease;
   }
+  .navbar .menu.active {
+    left: 0;
+  }
+
   .navbar .menu li {
     display: block;
   }
-  .navbar .menu li a{
+  .navbar .menu li a {
     display: inline-block;
-    margin: 20px 10px;
+    margin: 20px 0;
     font-size: 25px;
+  }
+
+  .home .home-content .text-2 {
+    font-size: 70px;
+  }
+  
+  .home .home-content .text-3 {
+      font-size: 35px;
+  }
+
+  .home .home-content a {
+    font-size: 23px;
+    padding: 10px 30px;
   }
 }
 
+@media(max-width: 690px){
+  .home .home-content .text-2 {
+    font-size: 60px;
+  }
+  
+  .home .home-content .text-3 {
+      font-size: 32px;
+  }
 
+  .home .home-content a {
+    font-size: 20px;
+  }
+}
+
+@media(max-width: 500px){
+  .home .home-content .text-2 {
+    font-size: 50px;
+  }
+  
+  .home .home-content .text-3 {
+      font-size: 27px;
+  }
+}
 
