--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
 }
 
 .navbar .logo a span {
-  color: rgb(250, 240, 99);
+  color: rgb(49, 173, 182);
 }
 
 .navbar.sticky .logo a span {
@@ -71,13 +71,13 @@
 /* ------- HOME ---------*/
 .home {
   display: flex;
-  background-color: rgb(12, 12, 12);
-  no-repeat center;
-  background-size: 100% 100%;
   height: 100vh;
   color: #fff;
   min-height: 500px;
   font-family: 'Ubuntu', sans-serif;
+  background-image: url(/images/cover.png);
+  background-size: 100% 100%;
+  
 }
 
 .home .max-width {
@@ -95,13 +95,31 @@
 }
 
 .home .home-content .text-3 {
-    font-size: 40px;
-    margin: 5px 0;
+  font-size: 40px;
+  margin: 5px 0;
 }
 .home .home-content .text-3 span {
   color: rgb(250, 240, 99);
   font-weight: 500;
 }
+
+.home .home-content a {
+  display: inline-block;
+  background:rgb(49, 173, 182);
+  color:white ;
+  font-size: 25px;
+  padding: 12px 36px;
+  border: 2px solid rgb(49, 173, 182);
+  border-radius: 10px;
+  margin-top: 20px;
+}
+
+.home .home-content a:hover {
+  color:rgb(250, 240, 99);
+  border: 2px solid rgb(250, 240, 99);
+  background:  none;
+}
+
 
 /*----- MENU MOBILE -----*/
 
@@ -112,7 +130,13 @@ cursor: pointer;
 display: none;
 }
 
+
 /*-----RESPONSIVE-----*/
+@media (max-width: 1300px){
+  .navbar .max-width {
+    margin-left: 0;
+  }
+}
 @media(max-width: 1104px){
   .navbar .max-width {
     margin-left: 0;
@@ -196,3 +220,45 @@ display: none;
   }
 }
 
+/* -------ABOUT------ */
+
+section {
+ padding: 100px 0; 
+}
+.about {
+  font-family: 'Roboto', sans-serif;
+}
+
+.about .tittle {
+  font-family: 'Ubuntu', sans-serif;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 500;
+  margin-bottom: 60px;
+  padding-bottom: 20px;
+  position: relative;
+}
+
+.about .tittle::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 180px;
+  height: 2px;
+  background-color: rgb(49, 173, 182);
+  transform: translateX(-50%);
+}
+
+.about .about-content .column-left {
+  width: 45%;
+}
+.about .about-content .column-left img {
+  width: 400px;
+  height: 400px;
+  object-fit: cover;
+}
+
+.about .about-content .column-right {
+  width: 55%;
+}
