--- a/style.css
+++ b/style.css
@@ -120,7 +120,6 @@
   background: rgb(250, 240, 99);
 }
 
-
 /* -------ABOUT------ */
 
 section {
@@ -129,7 +128,8 @@ section {
   background-color: rgb(250, 240, 99);
 }
 .about,
-.services, .contact {
+.services,
+.contact {
   font-family: 'Roboto', sans-serif;
 }
 
@@ -140,7 +140,7 @@ section {
   justify-content: space-between;
 }
 
-.about .tittle  {
+.about .tittle {
   font-family: 'Roboto', sans-serif;
   text-align: center;
   font-size: 43px;
@@ -261,8 +261,10 @@ section {
 }
 
 /*----- CONTACT -----*/
-
-.contact .tittle  {
+.contact {
+  height: 700px;
+}
+.contact .tittle {
   font-family: 'Roboto', sans-serif;
   text-align: center;
   font-size: 43px;
@@ -273,14 +275,20 @@ section {
   color: black;
 }
 .contact .contact-content {
-  align-items: flex-start;
-  }
-
-.contact .contact-content .column {
-  width: calc(50% - 30px);
+  display: flex;
 }
 
-.contact .contact-content .left  .icons {
+.contact .contact-content .column {
+  width: 50%;
+}
+
+.contact .contact-content .left p {
+  text-align: justify;
+  margin-top: 10px;
+  margin-bottom: 30px;
+}
+
+.contact .contact-content .left .icons {
   margin: 10px 0;
 }
 
@@ -295,7 +303,91 @@ section {
 }
 
 .contact .contact-content .row .info {
-  margin-left: 30px;
+  margin-left: 25px;
 }
 
+.contact .contact-content .right {
+  width: 50%;
+  margin-left: 50px;
+}
 
+.contact .right form .field,
+.contact .right form .fields .field {
+  width: 100%;
+  height: 45px;
+  margin-bottom: 15px;
+  margin-top: 10px;
+}
+
+.contact .right form .field input,
+.contact .right form .textarea textarea {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  outline: none;
+  padding: 0 15px;
+  font-size: 17px;
+  font-family: 'Roboto', sans-serif;
+  resize: none;
+}
+
+.contact .right form .textarea textarea {
+  height: 100px;
+}
+
+.contact .right form .button {
+  width: 170px;
+  height: 47px;
+}
+
+.contact .right form .button button {
+  margin-top: 60px;
+  width: 100%;
+  height: 100%;
+  border: 2px solid black;
+  background: black;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 500;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.contact .right form .button button:hover {
+  color: rgb(250, 240, 99);
+  background: black;
+}
+
+/*----- FOOTER -----*/
+
+.footer {
+  width: 100%;
+  height: auto;
+  background-color: #111;
+}
+
+.footer .buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 27px;
+}
+
+.footer .buttons .github {
+  margin-right: 15px;
+}
+
+.footer .buttons a {
+  color: rgb(250, 240, 99);
+}
+
+.footer h4 {
+  text-align: center;
+  font-size: 17px;
+  font-weight: 500;
+  font-family: 'Roboto', sans-serif;
+  margin-top: 15px;
+  color: rgb(250, 240, 99);
+}
